<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_add"
        android:icon="@drawable/add"
        android:title="@string/add"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_setting"
        android:title="@string/setting"
        android:icon="@drawable/setting"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/help"
        android:title="@string/help"
        app:showAsAction="never"/>
</menu>
