<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.haoyue.notedemos.materialdesign.MaterialDesignFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:text="@string/black_fragment"
            android:textSize="@dimen/middle_large" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:text="@string/hello_sophix_patchtool_fragment"
            android:textSize="@dimen/middle_large"
            android:background="@color/deep_green"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:text="@string/sophix_patchtool"
            android:textSize="@dimen/middle_large" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/lulu"/>
    </LinearLayout>
</FrameLayout>
